k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emby-manager
  labels:
    name: emby-manager
    app: emby-manager
